--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,47 @@
   -webkit-text-size-adjust: 100%;
 }
 */
+
+/* paginate */
+.paginationButtons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 10px;
+  margin-top: 20px;
+  height: 64px;
+}
+
+.previousButton,
+.nextButton,
+.pageLinkClassName {
+  margin: 0.25rem;
+  padding: 0.75rem 0.75rem;
+  background-color: #60a5fa;
+  color: #ffffff;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.previousButton:hover,
+.nextButton:hover,
+.pageLinkClassName:hover {
+  background-color: #3b82f6;
+}
+
+.paginationActive {
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #3b82f6;
+}
+
+.breakClassName {
+  margin: 0.25rem;
+  padding: 0.75rem 0.75rem;
+  cursor: default;
+  text-decoration: none;
+}
